--- a/themes/demo/assets/css/wohngesund.css
+++ b/themes/demo/assets/css/wohngesund.css
@@ -10,16 +10,32 @@ body section#layout-content .col-sm-9 {
 .container.wohngesund-brown{
     background: #543928;
     color: whitesmoke;
+    padding-bottom: 10px;
+    padding-top: 20px;
 }
+
+@media (max-width: 786px) {
+    header#layout-header{
+        display: none;
+    }
+    .sidebar-showrooms{
+        display: none;
+    }
+    body {
+        padding-top: inherit;
+    }
+}
+
 
 .navbar {
     border: none;
 }
 
-@media (min-width: 768px)
+@media (min-width: 768px) {
     .navbar {
         border-radius: 4px;
     }
+}
 
 .navbar-default {
     border-color: inherit;
@@ -52,8 +68,49 @@ body section#layout-content .col-sm-9 {
         color: white;
         border: none;
     }
+    .sidebar-nav .navbar li li a {
+        color: #0d0d0d;
+    }
+    .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+        background-color: #755c4a;
+        color: white;
+    }
+
+    .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+        color: #e9e9e9;
+        background-color: #755c4a;
+    }
+
+    .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+        color: #e9e9e9;
+        background-color:#755c4a;
+    }
+}
+
+.jumbotron.title-js{
+    background: rgba(243, 223, 188, 0.46);
+    color: #543928;
+}
+
+.jumbotron.title-js h1{
+    text-align: left;
 }
 
 .bigger{
-    font-size: 200%;
+    font-size: 300%;
+    text-transform: uppercase;
+}
+
+a {
+    color: #257576;
+}
+
+a:hover, a:focus {
+    color: rgba(55, 170, 171, 0.95);
+    text-decoration: underline;
+}
+
+.sidebar-showrooms a, footer a {
+    color: white;
+    text-decoration: underline;
 }
