plugin martin bloggallery etc 2

--- a/themes/demo/layouts/default.htm
+++ b/themes/demo/layouts/default.htm
@@ -7,8 +7,6 @@ code = "main-menu"
 ==
 <?php
 
-
-
 ?>
 ==
 <!DOCTYPE html>
@@ -30,7 +28,7 @@ code = "main-menu"
             'assets/css/wohngesund.css'
         ]|theme }}" rel="stylesheet">
     </head>
-    <body>
+    <body>´
 
         <!-- Header -->
         <header id="layout-header">
