--- a/themes/demo/layouts/default.htm
+++ b/themes/demo/layouts/default.htm
@@ -6,7 +6,10 @@ code = "main-menu"
 [staticPage]
 ==
 <?php
-
+use Milo\ActiveMenu;
+function onStart(){
+    $this['isChildActive'] = classActivePath($this)
+}
 ?>
 ==
 <!DOCTYPE html>
